...
                }
            }
        }
        .navigationBarBackButtonHidden(true)
        .toolbar {
            ToolbarItem(placement: .principal) {
                TextField("Search", text: $term.text)
                    .font(.body)
                    .frame(height: 55)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .padding([.leading, .trailing], 5)
                    .cornerRadius(16)
                    .scaledToFill()
                    .autocorrectionDisabled()
                    .onChange(of: term.debouncedText) { text in
                        vm.send(action: .load(text.sanitized))
                    }
            }
            ToolbarItem(placement: .destructiveAction) {
                Button("Cancel") {
                    vm.send(action: .cancel)
                }
            }
        }
    }
}
...
