...

extension Subreddit {
    static func example() -> Subreddit {
        return Subreddit(id: "33apz",
                    title: "Floof",
                    name: "t5_33apz",
                    display_name_prefixed: "r/Floof",
                    header_img: "https://a.thumbs.redditmedia.com/uNGS2EMF_E9zioRHXXuudcvNykqWHY16OIJDodHk9G0.png",
                    public_description: "Floofy puffy cats and dogs and birds and chinchillas and cows and bunnies and caterpillars and anything else!",
                    description_html: "&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;&lt;strong&gt;Rules:&lt;/strong&gt; &lt;/p&gt;\n\n&lt;ul&gt;\n&lt;li&gt;&lt;p&gt;Post floofy animals. Non-cat floofs are welcome too!&lt;/p&gt;&lt;/li&gt;\n&lt;li&gt;&lt;p&gt;Please don&amp;#39;t post your fat short-haired cats (or any obese pets) here. They&amp;#39;re cute and all but we need to stop glor
                    over18: false)
    }
    
...
